--- a/src/kits/bauhaus/components/Slider/Slider.css
+++ b/src/kits/bauhaus/components/Slider/Slider.css
@@ -23,6 +23,7 @@
   align-items: center;
   width: 100%;
   height: var(--bauhaus-control-h);
+  touch-action: none;
 }
 .bauhaus-slider__track {
   position: relative;
